deploy: 18b939e45ee2c7616ab56dbdab48a9bf4c4edb0a

--- a/goals/index.html
+++ b/goals/index.html
@@ -46,7 +46,7 @@
 <p>I believe it is important to set yourself the goals and work towards them.</p>
 <p>In my opinion, the goals should be ambitious to motivate for better results.
 At the same time, they must be somewhat close to reality and potentially achievable.</p>
-<p>I list my current goals in this post.</p>
+<p>I list my current financial goals in this post.</p>
 <h3 id=liquid-net-worth>Liquid net worth</h3>
 <p>This section includes any &ldquo;non-locked&rdquo; assets. Mostly they can be withdrawn and redeployed in just a few days.
 In particular:</p>
@@ -77,35 +77,35 @@ In particular:</p>
 <tr>
 <td>2022</td>
 <td>$100,000.00</td>
-<td>68.77%</td>
-<td></td>
-<td></td>
+<td>100%</td>
+<td>Dec 2021</td>
+<td>Accelerated savings</td>
 </tr>
 <tr>
 <td>2023</td>
 <td>$200,000.00</td>
-<td>19.65%</td>
+<td>52.67%</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
 <td>2024</td>
 <td>$350,000.00</td>
-<td>13.75%</td>
+<td>30.10%</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
 <td>2025</td>
 <td>$500,000.00</td>
-<td>9.82%</td>
+<td>21.07%</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
 <td>2026</td>
 <td>$1,000,000.00</td>
-<td>6.88%</td>
+<td>10.53%</td>
 <td></td>
 <td></td>
 </tr>
@@ -122,7 +122,7 @@ That means I&rsquo;ll have to either make much more money, take more risks or ad
 Besides, I would love to be able to modify the place I live in based on my needs and preferences. That is usually not an option when I rent.</p>
 <p>My goal is to have my own house by <strong>2025</strong>.</p>
 <p>The question here is <em>where</em> do I want to settle down.</p>
-<p>From a financial point of view, it should be feasible. I own some real estate back in my home country. I don&rsquo;t draw any interest from it, I use it to help my parents and family. But it should be possible to at cover downpayment.</p>
+<p>From a financial point of view, it should be feasible. I own some real estate back in my home country. I don&rsquo;t draw any interest from it, I use it to help my parents and family. But it should be possible to cover downpayment.</p>
 </div>
 </div>
 </section>
