--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html xmlns=http://www.w3.org/1999/xhtml lang=en-us>
 <head>
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Ang Mo Finance</title>
@@ -42,13 +42,26 @@
 <article>
 <div class="subtitle tags is-6 is-pulled-right">
 </div>
+<h2 class="subtitle is-6 date">February 11, 2022</h2>
+<h1 class=title><a href=https://angmo-finance.github.io/posts/goal-100k/>The $100,000 goal archived
+</a></h1>
+<div class=content>
+Less than half a year ago I published a list of my financial goals and now I&rsquo;m pleased to report the second goal, S$100,000 net worth, is archived! It also coincided with the end of the year, so I&rsquo;ll use the opportunity to do the year end review.
+<a class="button is-link" href=https://angmo-finance.github.io/posts/goal-100k/ style=height:28px>
+Read more
+</a>
+</div>
+</article>
+<article>
+<div class="subtitle tags is-6 is-pulled-right">
+</div>
 <h2 class="subtitle is-6 date">July 11, 2021</h2>
 <h1 class=title><a href=https://angmo-finance.github.io/goals/>Goals
 </a></h1>
 <div class=content>
 I believe it is important to set yourself the goals and work towards them.
 In my opinion, the goals should be ambitious to motivate for better results. At the same time, they must be somewhat close to reality and potentially achievable.
-I list my current goals in this post.
+I list my current financial goals in this post.
 <a class="button is-link" href=https://angmo-finance.github.io/goals/ style=height:28px>
 Read more
 </a>
@@ -93,21 +106,6 @@ Read more
 </a>
 </div>
 </article>
-<article>
-<div class="subtitle tags is-6 is-pulled-right">
-</div>
-<h2 class="subtitle is-6 date">April 19, 2021</h2>
-<h1 class=title><a href=https://angmo-finance.github.io/posts/introduction/>Let's start
-</a></h1>
-<div class=content>
-Hello there!
-In this blog, I want to share my finance and investment journey as an Ang Mo (white person) in Singapore.
-It might be useful for young foreigners in a similar situation as I am. It could be interesting for the more general public as most of the learnings are universal or it can be read just for laughs.
-<a class="button is-link" href=https://angmo-finance.github.io/posts/introduction/ style=height:28px>
-Read more
-</a>
-</div>
-</article>
 </div>
 </section>
 <section class=section>
@@ -119,6 +117,11 @@ Read more
 </div>
 <div class="level-right is-marginless">
 <div class=level-item>
+<a class=button href=/page/2/>
+Older
+<span class="icon is-small is-marginless"><svg viewbox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true"><polyline points="14 6 20 12 14 18"/></svg>
+</span>
+</a>
 </div>
 </div>
 </nav>
