deploy: 44115a5ac5440218e9fa39f0df4ae102b703b6bc

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 <div class="subtitle tags is-6 is-pulled-right">
 </div>
 <h2 class="subtitle is-6 date">February 11, 2022</h2>
-<h1 class=title><a href=https://angmo-finance.github.io/posts/goal-100k/>The $100,000 goal archived
+<h1 class=title><a href=https://angmo-finance.github.io/posts/milestone-100k/>The $100,000 milestone archived
 </a></h1>
 <div class=content>
-Less than half a year ago I published a list of my financial goals and now I&rsquo;m pleased to report the second goal, S$100,000 net worth, is archived! It also coincided with the end of the year, so I&rsquo;ll use the opportunity to do the year end review.
-<a class="button is-link" href=https://angmo-finance.github.io/posts/goal-100k/ style=height:28px>
+Less than half a year ago I published a list of my financial goals and now I&rsquo;m pleased to report the second milestone, S$100,000 net worth, is archived! It also coincided with the end of the year, so I&rsquo;ll use the opportunity to do the year end review.
+<a class="button is-link" href=https://angmo-finance.github.io/posts/milestone-100k/ style=height:28px>
 Read more
 </a>
 </div>
